docs(linux): add Linux port plan and documentation
- Add 6-phase implementation plan for Linux port
- Add project documentation (architecture, standards, overview)
- Add code review reports
- Update .gitignore for Python artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,26 @@
 *.ini
 *.log
 Test*.txt
+
+# Python
+*.pyc
+.coverage
+htmlcov/
+
+# Virtual environment
+.venv/
+
+# IDE
+.idea/
+.vscode/
+
+# Build
+dist/
+build/
+*.egg-info/
+
+# Claude cache
+.claude/tsc-cache/
+
+# Repomix output
+repomix-output.xml
