feat(linux): implement Phase 5 Wayland support
- Add InputBackend abstraction layer
- Add X11Backend wrapping pynput
- Add WaylandBackend with XWayland fallback
- Add EvdevBackend for direct kernel input
- Auto-detect session type (X11/Wayland)
- 25 backend tests, 83% coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "PyGObject>=3.44.0",
     "pulsectl>=23.5.0",
     "python-xlib>=0.33",
+    "evdev>=1.6.0",
 ]
 
 [project.optional-dependencies]
